# todo4

simple_calculator/: README.md  pyproject.toml
simple_calculator/src/calculator/: __init__.py  operations.py
simple_calculator/tests/: test_operations.py
