[tool.poetry]
name = "simple_calculator"
version = "0.1.0"
description = "A basic calculator module"
authors = ["Cleo Haddad"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

